--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
 <body>
   <div id="app"></div>
   <script src="bundle.js"></script>
+  <script type=module src="../src/components/App.js"></script>
 </body>
 </html>
