added movielist and movielistentry comps, put movie array into sep repo

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
   <title>Movie List</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="App">Movies here</div>
   <script src="bundle.js"></script>
-  <script type=module src="../src/components/App.js"></script>
 </body>
 </html>
